--- a/style/style.css
+++ b/style/style.css
@@ -803,61 +803,174 @@ h6 {
 .main-bg {
   background: url(/img/Header/bg.png);
   background-position: center;
-  height: 850px;
   background-repeat: no-repeat;
+  position: relative;
+  z-index: 2;
+}
+.main-sound {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 1000px;
 }
 .main-sound .main-sound-title {
-  position: relative;
-  top: 400px;
   font-size: 48px;
   font-weight: 700;
 }
 .main-sound-text {
-  position: relative;
-  top: 410px;
   font-weight: 700;
   font-size: 100px;
   color: #ffffff6b;
+  margin-bottom: 60px;
 }
 .main-sound-player {
-  position: relative;
-  top: 450px;
 }
 .main-sound-player-play {
   display: flex;
   justify-content: space-between;
+  position: relative;
+  z-index: 2;
+}
+.main-sound-player-play img {
+  margin-right: 30px;
 }
 .main-sound-player-line1 {
   height: 2px;
   width: 70px;
-  color: #7a66cc;
+  background-color: #7a66cc;
+  position: absolute;
+  left: 53px;
+  top: 50%;
 }
 .main-sound-player-line2 {
   width: 2px;
   height: 20px;
-  color: #7a66cc;
+  background-color: #7a66cc;
+  position: absolute;
+  left: 123px;
+  top: 17%;
 }
 .main-sound-player-line3 {
   width: 800px;
   height: 2px;
-  color: #7a66cc;
+  background-color: #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 125px;
+}
+.main-sound-player-time {
+  margin-left: 30px;
 }
 
 .main-cards {
   display: flex;
   justify-content: space-between;
   position: relative;
-  bottom: 70px;
-  margin-bottom: 150px;
+  bottom: 150px;
+
   max-height: 300px;
 }
 .main-cards-working {
-  background-image: url(/img/Main/work.png);
-  width: 100%;
-  height: 300px;
-  background-repeat: no-repeat;
+  position: relative;
+  z-index: 2;
+  border-radius: 30px 0px 30px 0px;
+  overflow: hidden;
+}
+.main-cards-working:hover {
+  box-shadow: 4px 4px 61px 9px rgba(240, 245, 249, 0.2);
+  transition: 0.3s ease;
 }
 
+.main-cards-working:hover .main-cards-working-text {
+  opacity: 1;
+}
+.main-cards-working-picture img {
+  width: 100%;
+  line-height: 0;
+}
+.main-cards-working-text {
+  position: absolute;
+  z-index: 5;
+  bottom: 0;
+  padding: 15px 10px;
+  font-size: 16px;
+  text-align: center;
+  background-color: #7a66cc90;
+  border-top-left-radius: 30px;
+  width: 100%;
+  opacity: 0;
+  transition: 0.3s ease;
+}
+.main-cards-halloween {
+  position: relative;
+  z-index: 2;
+  border-radius: 30px 0px 30px 0px;
+  overflow: hidden;
+}
+.main-cards-halloween:hover {
+  box-shadow: 4px 4px 61px 9px rgba(240, 245, 249, 0.2);
+  transition: 0.3s ease;
+}
+
+.main-cards-halloween:hover .main-cards-halloween-text {
+  opacity: 1;
+}
+
+.main-cards-halloween-picture img {
+  width: 100%;
+  line-height: 0;
+}
+.main-cards-halloween-text {
+  position: absolute;
+  z-index: 5;
+  bottom: 0;
+  padding: 15px 10px;
+  font-size: 16px;
+  background-color: #7a66cc90;
+  border-top-left-radius: 30px;
+  text-align: center;
+  width: 100%;
+  opacity: 0;
+  transition: 0.3s ease;
+}
+
+.main-cards-warForLove {
+  position: relative;
+  z-index: 2;
+  border-radius: 30px 0px 30px 0px;
+  overflow: hidden;
+}
+.main-cards-warForLove:hover {
+  box-shadow: 4px 4px 61px 9px rgba(240, 245, 249, 0.2);
+  transition: 0.3s ease;
+}
+
+.main-cards-warForLove:hover .main-cards-warForLove-text {
+  opacity: 1;
+}
+.main-cards-warForLove-picture img {
+  width: 100%;
+  line-height: 0;
+}
+.main-cards-warForLove-text {
+  position: absolute;
+  z-index: 5;
+  bottom: 0;
+  padding: 15px 10px;
+  font-size: 16px;
+  text-align: center;
+  background-color: #7a66cc90;
+  border-top-left-radius: 30px;
+  width: 100%;
+  opacity: 0;
+  transition: 0.3s ease;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 600;
+}
 .main-brightLights {
   margin-bottom: 150px;
 }
@@ -884,14 +997,17 @@ h6 {
 
 .main-brightLights-sectionOne {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   margin-bottom: 20px;
 }
 .main-brightLights-sectionOne-based {
   display: flex;
-  margin-right: 40px;
+  margin-bottom: 30px;
 }
 .main-brightLights-sectionOne-found {
+  display: flex;
+}
+.main-brightLights-sectionOne-genre {
   display: flex;
 }
 .main-brightLights-sectionOne-based-picture {
@@ -899,18 +1015,25 @@ h6 {
   height: 30px;
   background-color: #7a66cc;
   border-radius: 10px 0px 10px 0px;
-  margin-right: 20px;
+  margin-right: 10px;
+}
+.main-brightLights-sectionOne-genre-picture {
+  width: 30px;
+  height: 30px;
+  background-color: #7a66cc;
+  border-radius: 10px 0px 10px 0px;
+  margin-right: 10px;
 }
 .main-brightLights-sectionOne-found-picture {
   width: 30px;
   height: 30px;
   background-color: #7a66cc;
   border-radius: 10px 0px 10px 0px;
-  margin-right: 20px;
+  margin-right: 10px;
 }
 .main-brightLights-sectionTwo {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
 .main-brightLights-sectionTwo-based {
@@ -921,18 +1044,29 @@ h6 {
   height: 30px;
   background-color: #7a66cc;
   border-radius: 10px 0px 10px 0px;
-  margin-right: 20px;
+  margin-right: 10px;
 }
 
 .main-brightLights-sectionTwo-found {
   display: flex;
+  margin-bottom: 30px;
 }
 .main-brightLights-sectionTwo-found-picture {
   width: 30px;
   height: 30px;
   background-color: #7a66cc;
   border-radius: 10px 0px 10px 0px;
-  margin-right: 20px;
+  margin-right: 10px;
+}
+.main-brightLights-sectionTwo-label {
+  display: flex;
+}
+.main-brightLights-sectionTwo-label-picture {
+  width: 30px;
+  height: 30px;
+  background-color: #7a66cc;
+  border-radius: 10px 0px 10px 0px;
+  margin-right: 10px;
 }
 
 .main-brightLights-picture {
@@ -971,6 +1105,14 @@ h6 {
   font-weight: 700;
   color: #7a66cc;
 }
+.main-popULove-blockText-web a:hover {
+  transition: 0.3s ease;
+  background-color: #7a66cc;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 10px;
+  border: 1px solid #fff;
+}
 .main-popULove-picture {
   text-align: center;
 }
@@ -978,8 +1120,12 @@ h6 {
 .main-tracks {
   margin-bottom: 150px;
 }
+.main-tracks-picture img {
+  width: 100%;
+}
 .main-tracks-title {
   display: flex;
+  justify-content: center;
   align-items: center;
   margin-bottom: 60px;
 }
@@ -1038,6 +1184,9 @@ h6 {
 .main-slider-chandle {
   background-color: #2f2b2b;
   border-radius: 27px 0px 27px 0px;
+  position: relative;
+  z-index: 2;
+  overflow: hidden;
 }
 .main-slider-chandle-picture img {
   width: 100%;
@@ -1072,14 +1221,21 @@ h6 {
   margin-bottom: 20px;
 }
 .main-slider-chandle-buy-btn a {
-  border-radius: 30px 0px 30px 0px;
   padding: 18px 62px 20px 52px;
   color: #fff;
   background-color: #7a66cc;
 }
+.main-slider-chandle-buy-btn a:hover {
+  color: #fff;
+  background-color: #9f1b58;
+  transition: 0.3s ease;
+}
 .main-slider-ibiza {
   background-color: #2f2b2b;
   border-radius: 27px 0px 27px 0px;
+  position: relative;
+  z-index: 2;
+  overflow: hidden;
 }
 .main-slider-ibiza-picture img {
   width: 100%;
@@ -1114,12 +1270,20 @@ h6 {
   margin-bottom: 20px;
 }
 .main-slider-ibiza-buy-btn a {
-  border-radius: 30px 0px 30px 0px;
   padding: 18px 62px 20px 52px;
   color: #fff;
   background-color: #7a66cc;
 }
+.main-slider-ibiza-buy-btn a:hover {
+  color: #fff;
+  background-color: #9f1b58;
+  transition: 0.3s ease;
+}
+
 .main-slider-swing {
+  position: relative;
+  z-index: 2;
+  overflow: hidden;
   background-color: #2f2b2b;
   border-radius: 27px 0px 27px 0px;
 }
@@ -1156,10 +1320,14 @@ h6 {
   margin-bottom: 20px;
 }
 .main-slider-swing-buy-btn a {
-  border-radius: 30px 0px 30px 0px;
   padding: 18px 62px 20px 52px;
   color: #fff;
   background-color: #7a66cc;
+}
+.main-slider-swing-buy-btn a:hover {
+  color: #fff;
+  background-color: #9f1b58;
+  transition: 0.3s ease;
 }
 
 .footer {
@@ -1170,28 +1338,185 @@ h6 {
   margin-bottom: 40px;
 }
 .footer-contact {
+  display: flex;
   text-transform: uppercase;
+  justify-content: center;
   margin-bottom: 40px;
 }
-.footer-artist {
-  font-weight: 600;
+.footer-contact-title {
+  text-align: right;
+  margin-right: 30px;
 }
-.footer-artist span {
-  font-weight: 400;
-  margin-left: 30px;
-}
-.footer-mail {
-  font-weight: 600;
-}
-.footer-mail span {
-  font-weight: 400;
-  margin-left: 30px;
+.footer-contact-text {
+  text-align: left;
 }
 .footer-messenger {
   margin-bottom: 100px;
+}
+.footer-messenger a {
+  margin-right: 15px;
+  margin-left: 15px;
+}
+.footer-messenger img:hover {
+  transform: scale(1.2);
+  transition: 0.5s ease;
 }
 .footer-text {
   font-size: 13px;
   opacity: 50%;
   margin-bottom: 20px;
+}
+
+@media (max-width: 1070px) {
+  .main-sound-player-line3 {
+    width: 600px;
+  }
+  .main-sound-player-time {
+    margin-right: 15%;
+  }
+}
+@media (max-width: 1020px) {
+  .main-sound-player-line3 {
+    width: 400px;
+  }
+  .main-sound-player-time {
+    margin-right: 33%;
+  }
+}
+@media (max-width: 1020px) {
+  .main-sound-player-play {
+    display: none;
+  }
+}
+@media (max-width: 992px) {
+  .main-cards {
+    margin-bottom: 0px;
+  }
+  .flex {
+    justify-content: space-around;
+    margin-bottom: 40px;
+  }
+  .main-popULove-picture img {
+    width: 100%;
+  }
+  .main-brightLights-head {
+    justify-content: center;
+  }
+  .main-tracks-picture {
+    margin: 0 auto;
+    margin-bottom: 50px;
+  }
+  .main-slider-chandle {
+    margin-bottom: 30px;
+  }
+  .main-slider-ibiza {
+    margin-bottom: 30px;
+  }
+  .main-slider-swing {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 770px) {
+  .main-sound-title {
+    font-size: 30px;
+  }
+  .main-sound-text {
+    font-size: 60px;
+  }
+  .main-sound {
+    padding-bottom: 450px;
+  }
+  .main-cards {
+    bottom: 570px;
+    margin-bottom: 400px;
+  }
+  .main-cards-working-picture {
+    width: 400px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+  }
+  .main-cards-halloween-picture {
+    width: 400px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+  }
+  .main-cards-warForLove-picture {
+    width: 400px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+  }
+  .main-popULove-blockText {
+    margin-bottom: 30px;
+    padding: 20px;
+  }
+  .main-popULove-picture img {
+    width: 500px;
+    height: 500px;
+  }
+}
+@media (max-width: 550px) {
+  .main-popULove-picture img {
+    width: 400px;
+    height: 450px;
+  }
+}
+@media (max-width: 500px) {
+  .flex {
+    display: block;
+  }
+  .main-brightLights-sectionOne-genre {
+    margin-bottom: 10px;
+  }
+  .main-tracks-social {
+    flex-direction: column;
+  }
+  .main-tracks-social-title {
+    margin-bottom: 20px;
+  }
+  .main-tracks-social-info {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 426px) {
+  .main-popULove-picture img {
+    width: 290px;
+    height: 300px;
+  }
+  .main-cards-working-picture {
+    width: 250px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+  }
+  .main-cards-halloween-picture {
+    width: 250px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+  }
+  .main-cards-warForLove-picture {
+    width: 250px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+  }
+  .main-sound-title {
+    font-size: 20px;
+  }
+  .main-sound-text {
+    font-size: 40px;
+  }
+  .main-cards {
+    margin-bottom: 0px;
+  }
+  .main-brightLights-head-img img {
+    margin-right: 0px;
+  }
+  .main-brightLights-head-title {
+    font-size: 30px;
+  }
+  .main-tracks-title-text {
+    font-size: 35px;
+  }
+  .main-tracks-title-img {
+    margin-right: 20px;
+  }
 }
