--- a/style/style.css
+++ b/style/style.css
@@ -817,7 +817,7 @@ body::-webkit-scrollbar-thumb {
 .main {
 }
 .main-bg {
-  background: url(/img/Header/bg.png);
+  background: url(../img/Header/bg.png);
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
